* ADDED: beta umxTwoStage function for FIML-based Instrumental variable and Mendelian Randomization
* ADDED: umx_set_condensed_slots(TRUE|FALSE): Get and set matrix compression
* ADDED: umx_get_OpenMx() (download OpenMP/parallel version of OpenMx with NPSOL)
* ADDED: umx_cont_2_quantile(x, nlevels=)
* ADDED: umx_factor alias to umxFactor
* IMPROVED: umxFactor now handles dataframes and allows non-ordered output
* IMPROVED: umx_CI() more flexible, now allows removing CIs
  * Old code will break: replace "add" with "which"
* IMPROVED: umx_time handling of no input arguments
* IMPROVED: umx_pb_note() better feedback and setup
* IMPROVED: loadings() generic
* CHANGE: Plot defaults for std and showFixed changed h/t @MikeNeale
* CHANGE: umx_scale_wide_twin_data argument names for consistency: "suffix" "data"
* CHANGE: umx_residualize() ditto
* UPDATE: Readme.md

# umx 1.2.5
* April 2016 bug fix release
* FIX: $models bug in umxStandardizeACE
* EXPAND: test suite

# umx 1.2.0
* April 2016 R 3.2.4 Very Secure Dishes edition
* NEW: Plot using DiagrammeR!
* NEW: Choose plot format!
 * umx_set_plot_format("DiagrammeR")
 * umx_set_plot_format("graphviz")
* NEW: Choose table format!
 * umx_set_table_format("markdown")
 * umx_set_table_format("latex")
* NEW: set plotting by default: umx_set_auto_plot(TRUE) 
* NEW: Exploratory factor analysis! with umxEFA() (beta!)
* NEW loadings() support for umxEFA
* CHANGE:  .dot --> .gv suffix for plotting (more compatible)
* CHANGE: To $ from @ accessors for OpenMx compression compatibility
* BETTER: Help! ACECov figure, ... many other improvements
* ENHANCED: umx_print, umx_show, umxCompare
* REQUIRE knitr, DiagrammeR
* INCREASE minimum R / OpenMx to  >= 3.2.0 / >= 2.5.0

# umx 1.1.5
* March 2016 Boulder Workshop feedback updates
* NEW: plot() now works on Windows and Unix as well as OS X! (h/t @mhunter)
* CHANGE: umxReRun to umxModify (h/t @hmaes)
* BETTER: compatibility with OpenMx 2.5.2

# umx 1.1.1